Scroll bar and fix overflow in chrome

--- a/src/index.css
+++ b/src/index.css
@@ -15,5 +15,8 @@
       /* font-family: "Lora", serif; */
       /* font-family: "Barlow", sans-serif; */
       /* font-family: "Quicksand", serif; */
+      overflow-x: hidden;
+      -ms-overflow-style: none;  /* Internet Explorer 10+ */
+      scrollbar-width: none;  /* Firefox */
     }
   }
